@@ -1,0 +1,34 @@
+/* XPM */ 
+static const unsigned char * auinotebook_xpm[] = {
+"21 21 10 1",
+" 	c None",
+"!	c black",
+"#	c #333366",
+"$	c #9F9F9F",
+"%	c #B8B8B8",
+"&	c #C5C5C5",
+"'	c #FFFBF0",
+"(	c #393939",
+")	c #D2D2D2",
+"*	c #EBEBEB",
+"                     ",
+" ####################",
+" #$$$$$$$$$$$$$$$$$$#",
+" #%%########%%%%%%%%#",
+" #&#''''('('#&&&&&&&#",
+" #)#*****(**#)))))))#",
+" ###****(*(*#########",
+" #$$$$$$$$$$$$$$$$$$#",
+" ####################",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" #''''''''''''''''''#",
+" ####################"};
